Fix z-index in top menu

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -38,6 +38,7 @@ pre > code {
 .navbar {
   height: 47px;
   margin-bottom: 2em;
+  z-index: 1000
 }
 
 //home page
